# leetcode-tracker

./: .env.example  .gitattributes  .gitignore  502_TROUBLESHOOTING_GUIDE.md  ARCHITECTURE_IMPLEMENTATION_PLAN.md  AUTO_SYNC_GUIDE.md  BUG_FIXES_SUMMARY.md  CHANGES_SUMMARY.md  COMPLETE_DEPLOYMENT_GUIDE.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_TROUBLESHOOTING.md  DOCKER_DEPLOY_GUIDE.md  Dockerfile  FINAL_DEPLOYMENT_INSTRUCTIONS.md  FRONTEND_ARCHITECTURE.md  GITHUB_OAUTH_SETUP.md  GRAFANA_COMPLETE_SETUP.md  GRAFANA_DATA_FIX.md  GRAFANA_DEPLOYMENT_GUIDE.md  GRAFANA_DOCKER_DESKTOP.md  GRAFANA_FIX_COMPLETE.md  GRAFANA_FIX_INSTRUCTIONS.md  GRAFANA_FIX_SUMMARY.md  GRAFANA_PROBLEM_ANALYSIS.md  GRAFANA_SETUP.md  LEETCODE_API_INTEGRATION.md  LEETCODE_API_SUMMARY.md  LEETCODE_SYNC_GUIDE.md  LEETCODE_USERNAME_TROUBLESHOOTING.md  PLAN_ARCHITECTURE_SESSION_FIX.md  PROFILE_STYLES_FIX.md  PROJECT_ANALYSIS_AND_MONITORING.md  QUICK_START.md  README.md  README_MIGRATIONS.md  README_NEW.md  SERVER_GUIDE.md  SERVER_INFO.md  SERVER_INFOv2.md  alembic.ini  (+48 more)
alembic/: env.py
alembic/versions/: ed721a9614c3_add_leetcode_username_to_users.py  fa134401ebeb_add_leetcode_stats_to_users.py
docs/: CHANGES_SUMMARY.md  GIT_WORKFLOW.md  MIGRATION_GUIDE.md  RELEASE_NOTES_v2.0.0.md  SERVER_INFOv2.md  VIEW_POSTGRES_DATABASE.md
frontend/: package-lock.json  vite.config.ts
frontend/src/: App.tsx  main.css  main.tsx
frontend/src/components/: CalendarSection.tsx  ChartsSection.tsx  GoalSection.tsx  MetricsSection.tsx  RecentTasksTable.tsx  TaskForm.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Dashboard.tsx  Login.css  Login.tsx  Profile.css  (+1 more)
grafana/: prometheus.yml
leetcode_tracker/: __init__.py  auth.py  background_sync.py  config.py  database.py  dependencies.py  deploy.py  leetcode_client.py  main.py  models.py  ranks.py  schemas.py
leetcode_tracker/routers/: auth.py  frontend.py  leetcode.py  profile.py  stats.py  sync.py  tasks.py
leetcode_tracker/static/: main.css
leetcode_tracker/templates/: base.html  index.html  login.html  profile.html
leetcode_tracker_uv/: README.md  pyproject.toml
leetcode_tracker_uv/leetcode_tracker/: auth.py  main.py  models.py  ranks.py  schemas.py
leetcode_tracker_uv/leetcode_tracker/static/: main.css
leetcode_tracker_uv/leetcode_tracker/templates/: base.html  index.html
scripts/: create_test_data.py  deploy.py  export_data.py  fix_dashboard_for_sqlite.py  fix_dashboard_uids.py  migrate_sqlite_to_postgres.py
(+5 files in other folders)
