[project]
name = "leetcode-tracker"
version = "0.1.0"
description = "Interactive LeetCode productivity tracker (FastAPI + uv + Chart.js)"
authors = [{ name = "Your Name" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.112.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.7.0",
    "pydantic[email]>=2.7.0",
    "authlib>=1.3.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "itsdangerous>=2.1.2",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
]

[tool.uv]
# default settings are fine, this section can stay empty or be omitted

[tool.uv.sources]
# left empty on purpose
